showing configurations sidebar on social sharing settings area

--- a/app/views/spree/admin/social/edit.html.erb
+++ b/app/views/spree/admin/social/edit.html.erb
@@ -1,3 +1,5 @@
+<%= render :partial => 'spree/admin/shared/configuration_menu' %>
+
 <h1><%= t("social_sharing_buttons") %></h1>
 <div class="social_sharing_form">
   <p><%= t("social_sharing_settings_description") %></p>
